--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,14 @@
             "email": "ivbakin@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.11"
+    },
     "bin": [
-	"bin/brain-games"
-    ]
+	   "bin/brain-games"
+    ],
+    "autoload": {
+        "files": ["src/cli.php"]
+    }
 
 }
