--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "ivbakin@gmail.com"
         }
     ],
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.11"
     },
