--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: php
 php:
-  - '7.0'
+  - '7.2'
+
+install:
+  - composer self-update
+  - make install
 
 script: make lint test
+
+after_script:
+  - vendor/bin/test-reporter
