--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     ],
     "autoload": {
         "files": ["src/cli.php"]
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.5.0"
     }
-
 }
