--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ php:
   - '7.2'
 
 install:
+  - composer install
   - composer self-update
   - make install
 
-script: make lint test
+script: make lint
 
 after_script:
   - vendor/bin/test-reporter
