--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "wp-cli/php-cli-tools": "^0.11.11"
     },
     "bin": [
-	   "bin/brain-games"
+	   "bin/brain-even"
     ],
     "autoload": {
-        "files": ["src/cli.php"]
+        "files": ["src/cli.php","src/even.php"]
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.5.0"
