--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "wp-cli/php-cli-tools": "^0.11.11"
     },
     "bin": [
-	   "bin/brain-even","bin/brain-calc","bin/brain-gcd"
+	   "bin/brain-even","bin/brain-calc","bin/brain-gcd","bin/brain-progress"
     ],
     "autoload": {
-        "files": ["src/cli.php","src/even.php","src/calc.php","src/gcd.php"]
+        "files": ["src/cli.php","src/even.php","src/calc.php","src/gcd.php","src/progess.php"]
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.5.0"
